--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+[1.1.0][October 8, 2017][C:1.3.2]
++ Xenon EPP Pack (Cold) (Xenon Pack + Heating EPP)
++ Xenon EPP Pack (Heat) (Xenon Pack + Cooling EPP)
+
 [1.0.0][October 6, 2017][C:1.3.2]
 ~ Player can now beam from the underground in Survival.
 ~ Player now drop 10% pixels at death. (Down from 30%)
