--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+[1.1.1][October 8, 2017][C:1.3.2]
+> Fixed Xenon EPP Pack (Cold) to allow augments.
+> Fixed Xenon EPP Pack (Heat) to allow augments.
+
 [1.1.0][October 8, 2017][C:1.3.2]
 + Xenon EPP Pack (Cold) (Xenon Pack + Heating EPP)
 + Xenon EPP Pack (Heat) (Xenon Pack + Cooling EPP)
