--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+[1.1.2][October 8, 2017][C:1.3.2]
+~ Xenon EPP Pack (Cold) now use a custom png.
+~ Xenon EPP Pack (Heat) now use a custom png.
+> Fixed Xenon EPP Pack (Cold) to allow back augments.
+> Fixed Xenon EPP Pack (Heat) to allow back augments.
+
 [1.1.1][October 8, 2017][C:1.3.2]
 > Fixed Xenon EPP Pack (Cold) to allow augments.
 > Fixed Xenon EPP Pack (Heat) to allow augments.
