--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+[1.2.0][October 10, 2017][C:1.3.2]
++ MxTable crafting table for the MxSB recipe(s)
+~ Xenon EPP Pack (Cold) now crafted in the MxTable.
+~ Xenon EPP Pack (Heat) now crafted in the MxTable.
+
 [1.1.2][October 8, 2017][C:1.3.2]
 ~ Xenon EPP Pack (Cold) now use a custom png.
 ~ Xenon EPP Pack (Heat) now use a custom png.
